<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:curveDirection="bottom_to_top"
    app:curveRadius="10dp">


    <com.example.curved.CurvedTextView
        android:id="@+id/CurvedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:longClickable="true"
        android:padding="16dp"
        android:text="@string/DRAW"
        android:textColor="#490303"
        android:textStyle="bold"
        android:visibility="visible"
        app:curveDirection="bottom_to_top"
        app:curveRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/anton"
        android:text="@string/creative_writing_text"
        android:textColor="#08134C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/creative_writing"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/anton"
        android:text="@string/education_text"
        android:textColor="#08134C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/education"
        app:layout_constraintEnd_toStartOf="@+id/video_and_music"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/technology_and_coding_text"
        android:textColor="#08134C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/technology_and_coding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creative_writing"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/anton"
        android:text="@string/draw_text"
        android:textColor="#08134C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/draw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toEndOf="@+id/video_and_music" />

    <ImageView
        android:id="@+id/draw"
        android:layout_width="98dp"
        android:layout_height="83dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="332dp"
        android:src="@drawable/draw"
        android:contentDescription="@string/draw_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/education"
        android:layout_width="98dp"
        android:layout_height="83dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="332dp"
        android:src="@drawable/education"
        android:contentDescription="@string/education_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/technology_and_coding"
        android:layout_width="98dp"
        android:layout_height="83dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/technology_and_coding"
        android:contentDescription="@string/technology_and_coding_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creative_writing" />

    <ImageView
        android:id="@+id/video_and_music"
        android:layout_width="98dp"
        android:layout_height="83dp"
        android:layout_marginTop="212dp"
        android:src="@drawable/video_and_music"
        android:contentDescription="@string/video_and_music_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/creative_writing"
        android:layout_width="98dp"
        android:layout_height="83dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/creative_writing"
        android:contentDescription="@string/creative_writing_image"
        app:layout_constraintEnd_toStartOf="@+id/draw"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toEndOf="@+id/education"
        app:layout_constraintTop_toBottomOf="@+id/video_and_music" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/anton"
        android:text="@string/video_and_music_text"
        android:textColor="#08134C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/video_and_music"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>